avatar added to docs site

--- a/docs/pages/components/alert-dialog.mdx
+++ b/docs/pages/components/alert-dialog.mdx
@@ -79,7 +79,7 @@ The AlertDialog component is used to show important alerts that interrupt the us
 
 ## Variants
 
-AlertDialog actions can use different ButtonWithMode variants to indicate different levels of severity.
+AlertDialog actions can use different [Button](https://nativecn.xyz/components/button) variants to indicate different levels of severity.
 
 <ComponentPreview
   title="AlertDialog Variants"
