command doc update

--- a/docs/pages/components/accordion.mdx
+++ b/docs/pages/components/accordion.mdx
@@ -16,7 +16,7 @@ The Accordion component provides an expandable/collapsible content container.
 
 <ComponentCode 
   language="bash"
-  code="npx nativecn add accordion"
+  code="npx @nativecn/cli add accordion"
   title="Installation Command"
 />
 
