--- a/docs/pages/components/alert-dialog.mdx
+++ b/docs/pages/components/alert-dialog.mdx
@@ -17,7 +17,7 @@ The Alert Dialog component provides a modal dialog that interrupts the user with
 
 <ComponentCode 
   language="bash"
-  code="npx nativecn add alert-dialog"
+  code="npx @nativecn/cli add alert-dialog"
   title="Installation Command"
 />
 
