--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -57,7 +57,7 @@ The Alert component provides contextual feedback messages for typical user actio
 
 <ComponentCode 
   language="bash"
-  code="npx nativecn add alert"
+  code="npx @nativecn/cli add alert"
   title="Installation Command"
 />
 
