--- a/docs/pages/components/button.mdx
+++ b/docs/pages/components/button.mdx
@@ -16,7 +16,7 @@ The Button component is a versatile UI element designed for user interactions.
 
 <ComponentCode 
   language="bash"
-  code="npx nativecn add button"
+  code="npx @nativecn/cli add button"
   title="Installation Command"
 />
 
