--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -20,7 +20,7 @@ NativeCN provides a convenient CLI to help you get started quickly:
 
 <ComponentCode
   language="bash"
-  code="npx nativecn init"
+  code="npx @nativecn/cli init"
   title="Init Command"
 />
 
@@ -35,7 +35,7 @@ The `init` command:
 
 <ComponentCode
   language="bash"
-  code="npx nativecn add button card input"
+  code="npx @nativecn/cli add button card input"
   title="Add Components Command"
 />
 
