--- a/docs/pages/components/avatar.mdx
+++ b/docs/pages/components/avatar.mdx
@@ -26,7 +26,7 @@ The Avatar component is used to display user profile pictures with fallback supp
 
 <ComponentCode 
   language="bash"
-  code="npx nativecn add avatar"
+  code="npx @nativecn/cli add avatar"
   title="Installation Command"
 />
 
