meta descriptions for all pages

--- a/docs/pages/components/accordion.mdx
+++ b/docs/pages/components/accordion.mdx
@@ -1,3 +1,8 @@
+---
+title: "Accordion Component | NativeCN UI"
+description: "Collapsible content sections for React Native apps - create interactive FAQs, nested navigation, and organize complex information with this versatile component."
+---
+
 # Accordion Component
 
 import { Accordion, AccordionItem, AccordionTrigger, AccordionContent } from '../../components/ui/accordion'
