--- a/docs/pages/components/alert-dialog.mdx
+++ b/docs/pages/components/alert-dialog.mdx
@@ -1,3 +1,8 @@
+---
+title: "Alert Dialog Component | NativeCN UI"
+description: "Interactive modal dialogs for React Native apps - create confirmation prompts, important notifications, and action confirmations with accessible design."
+---
+
 # Alert Dialog Component
 
 import { AlertDialog, AlertDialogTrigger, AlertDialogContent, AlertDialogHeader, AlertDialogFooter, AlertDialogTitle, AlertDialogDescription, AlertDialogAction, AlertDialogCancel } from '../../components/ui/alertdialog'
