--- a/docs/pages/components/alert.mdx
+++ b/docs/pages/components/alert.mdx
@@ -1,3 +1,8 @@
+---
+title: "Alert Component | NativeCN UI"
+description: "Contextual feedback alerts for React Native apps - create informational, warning, success, and error notifications with customizable styling."
+---
+
 # Alert Component
 
 import { Alert, AlertTitle, AlertDescription } from '../../components/ui/alert'
