--- a/docs/pages/components/avatar.mdx
+++ b/docs/pages/components/avatar.mdx
@@ -1,3 +1,8 @@
+---
+title: "Avatar Component | NativeCN UI"
+description: "User profile pictures with fallback support for React Native apps - create avatars with different sizes, states, and seamless image handling."
+---
+
 # Avatar Component
 
 import { Avatar, AvatarImage, AvatarFallback } from '../../components/ui/avatar'
