--- a/docs/pages/components/button.mdx
+++ b/docs/pages/components/button.mdx
@@ -1,3 +1,8 @@
+---
+title: "Button Component | NativeCN UI"
+description: "Versatile button component for React Native apps with multiple variants, sizes, and states - designed for beautiful interactions in your mobile UI."
+---
+
 # Button Component
 
 import Button from '../../components/ui/button'
