--- a/docs/pages/components/skeleton.mdx
+++ b/docs/pages/components/skeleton.mdx
@@ -1,3 +1,8 @@
+---
+title: "Skeleton Component | NativeCN UI"
+description: "Loading state placeholders for React Native apps - create smooth user experiences with animated content loaders for various UI elements."
+---
+
 # Skeleton Component
 
 import { Skeleton } from '../../components/ui/skeleton'
