--- a/docs/pages/getting-started.mdx
+++ b/docs/pages/getting-started.mdx
@@ -1,3 +1,8 @@
+---
+title: "Getting Started with NativeCN - Setup Guide"
+description: "Learn how to integrate NativeCN UI components into your React Native application with our step-by-step guide."
+---
+
 import ComponentCode from '../components/ComponentCode'
 
 ## Prerequisites
