--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,3 +1,8 @@
+---
+title: "NativeCN - Beautiful UI Components for React Native"
+description: "A React Native UI component library inspired by shadcn/ui. Get beautiful, accessible UI components for your React Native apps by copying and pasting code."
+---
+
 # Introduction
  
 Welcome to NativeCN - A beautiful and customizable React Native UI component library inspired by [shadcn/ui](https://ui.shadcn.com/).
