vercel error fix

--- a/docs/pages/components/input-otp.mdx
+++ b/docs/pages/components/input-otp.mdx
@@ -257,7 +257,7 @@ export function VerificationScreen() {
   separator?: boolean | React.ReactNode;
   size?: 'sm' | 'md' | 'lg';
   mask?: boolean;
-  keyboard?: 'default' | 'numeric';
+  keyboard?: 'default' | 'numeric' | 'email-address' | 'phone-pad';
   error?: boolean | string;
   className?: string;
   mode?: 'light' | 'dark';
